--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ categories:
 	<div class="col-lg-12">
 		<div class="smallhead">
       <p>
-        Welcome to NuQLO at PUC-Rio, a research group focused on quantum communication and computation. We are dedicated to advancing quantum technologies and exploring their practical applications. Our team of scientists and engineers conducts innovative research, collaborating with institutions to drive progress in the field. Through our work, we aim to shape the future of quantum technology and inspire the next generation of researchers and engineers.
+        Welcome to NuQLO at PUC-Rio, a research group focused on quantum communication and computation. We are dedicated to advancing quantum technologies and exploring their practical applications. Our team of scientists and engineers conducts innovative research, collaborating with institutions to drive progress in the field.
       </p>
       <p>
       </p>
